# natsproto

./: .gitignore  README.md  demo.py  pyproject.toml
src/pynats/: errors.py
src/pynats/aio/: __init__.py  client.py  msg.py  subscription.py  subscription_registry.py
src/pynats/aio/connection/: __init__.py  connection.py  monitor.py  reader.py  writer.py
src/pynats/aio/transport/: __init__.py  abc.py  asyncio_tcp.py
src/pynats/core/: __init__.py  client_state.py  msg.py  pending_buffer.py  subscription.py  subscription_registry.py
src/pynats/io/: __init__.py  client.py  msg.py  subscription.py  subscription_registry.py
src/pynats/io/connection/: connection.py
src/pynats/io/transport/: __init__.py  abc.py  socket_tcp.py
src/pynats/protocol/: __init__.py  client_options.py  connection.py  connection_state.py  constant.py  errors.py  events.py  server.py  server_pool.py  subscription.py
src/pynats/protocol/payload/: __init__.py
src/pynats/protocol/payload/client/: __init__.py  connect.py
src/pynats/protocol/payload/server/: __init__.py  error.py  info.py  metadata.py  msg.py
src/pynats/protocol/serialization/: __init__.py  errors.py  headers.py  info.py  metadata.py
tests/test_protocol/: test_connection.py  test_connection_state.py
